Fixed some layout issues

--- a/smewt/media/common/less/style.less
+++ b/smewt/media/common/less/style.less
@@ -1,8 +1,7 @@
 @import "bootstrap/bootstrap.less";
 
 body {
-  padding-top: 60px;
-  padding-bottom: 40px;
+  padding-top: 10px;
 }
 
 @import "bootstrap/responsive.less";
@@ -11,14 +10,3 @@ body {
 /* ===== Primary Styles ========================================================
    Author:
    ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
